qttools-opensource-src (5.9.2-4) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 06 Nov 2017 16:27:47 -0300

qttools-opensource-src (5.9.2-3) unstable; urgency=medium

  * Move Qt5LinguistTools*.cmake from qttools5-dev-tools to qttools5-dev.
  * Re-enable qtwebkit support again.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 27 Oct 2017 00:35:11 +0300

qttools-opensource-src (5.9.2-2) experimental; urgency=medium

  * Update for Qt binaries location change in qtbase 5.9.2+dfsg-3.
    - Update .install files for qttools5-dev-tools and qdbus-qt5.
    - Make these packages Multi-Arch: foreign.
    - Provide compatibility symlinks for the old location.
    - Bump qtbase5-dev build-dependency to 5.9.2+dfsg-3.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 20 Oct 2017 13:42:25 +0300

qttools-opensource-src (5.9.2-1) experimental; urgency=medium

  * New upstream release.
  * Temporarily disable webkit support.
  * Bump Qt build-dependencies to 5.9.2.
  * Update symbols files from buildds’ logs.
  * Update debhelper compatibility level to 10.
  * Bump Standards-Version to 4.1.1, stop using deprecated Priority: extra.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 18 Oct 2017 17:35:11 +0300

qttools-opensource-src (5.9.1-2) unstable; urgency=medium

  * Update symbols files from the current build logs.
  * Upload to unstable.
    - Fixes build failure with GCC 7 (closes: #853633).

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 16 Aug 2017 12:18:33 +0300

qttools-opensource-src (5.9.1-1) experimental; urgency=medium

  * New upstream release.
  * Update symbols files from buildds’ logs.
  * Bump Qt build-dependencies to 5.9.1.
  * Bump Standards-Version to 4.0.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 02 Jul 2017 16:08:50 +0300

qttools-opensource-src (5.9.0-1) experimental; urgency=medium

  * Team upload.

  [ Simon Quigley ]
  * New upstream release.
