@@ -8,7 +8,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Felix Geyer <fgeyer@debian.org>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper (>= 10.9.2~),
                libqt5opengl5-dev (>= 5.9.2+dfsg~),
                libqt5sql5-sqlite (>= 5.9.2+dfsg~),
                libqt5webkit5-dev (>= 5.9.2~) [!alpha !m68k !sh4],
