@@ -16,11 +16,6 @@ no_qwebview_archs := alpha sh4 m68k
 %:
 	dh $@ --with pkgkde_symbolshelper
 
-# We override qmake until https://bugreports.qt.io/browse/QTBUG-30735
-# gets solved (FTBFS with -nocache).
-override_dh_auto_configure:
-	qmake 
-
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -fv .qmake.cache
